--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -28,13 +28,20 @@ jobs:
       - name: upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: dist-files
-          path: |
-            dist
-            package.json
+          name: dist-files  # we upload files with this name and while doenloading te same name will be use din build code
+          path: dist
+         # path: |
+         #   dist
+         #   package.json
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Get build artifacts
+        uses: actions/download-artifact@v3 
+        with:
+          name: dist-files  
+      - name: output contents
+        run: ls
       - name: Deploy
         run: echo "Deploying..."
