--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,13 +18,18 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      script-file: ${{ steps.publish.outputs.somefile}}
     steps:
       - name: Get code
         uses: actions/checkout@v3
       - name: Install dependencies
         run: npm ci
       - name: Build website
-        run: npm run build
+        run: npm run build    #once this is built we get a folder with dist ->assets'>.js file
+      - name: Publish JS filename
+        id: publish
+        run: find dist/assets/*.js -type f -execdir echo 'somefile={}' >> $GITHUB_OUTPUT ';'
       - name: upload artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -43,5 +48,7 @@ jobs:
           name: dist-files  
       - name: output contents
         run: ls
+      - name: output filename
+        run: ${{needs.build.outputs.script-file}}         #needs contains info abt all job that are defined as dependency of curret job. for deploy build is needs obj so all info will be there in needs
       - name: Deploy
         run: echo "Deploying..."
