--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,6 +9,13 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm    # here is where npm caches dependencies stored
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+          # packagelock json will have all dependies of proj and when ever it changes the hash that will be prodices
+          #by hash file will not be same as previos and thats how git know to discard earlier hash and install new
       - name: Install dependencies
         run: npm ci
       - name: Lint code
@@ -23,6 +30,11 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm    # here is where npm caches dependencies stored
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
       - name: Build website
